<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Álinson Santos Xavier <isoron@gmail.com>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout style="@style/dialogFormRow"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://isoron.org/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <TextView
        style="@style/dialogFormLabel"
        android:text="@string/target"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <EditText
            android:id="@+id/tvTargetCount"
            style="@style/dialogFormInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/count"
            android:inputType="numberDecimal"
            android:text="@string/default_count"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <org.isoron.uhabits.activities.habits.edit.views.ExampleEditText
            android:id="@+id/tvUnit"
            style="@style/dialogFormInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unit"
            android:inputType="text"
            app:example="@string/example_units"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>