<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Álinson Santos Xavier <isoron@gmail.com>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:title="@string/app_name"
        app:popupTheme="?toolbarPopupTheme"/>

    <LinearLayout
        android:id="@+id/formPanel"
        style="@style/dialogFormPanel">

        <LinearLayout
            style="@style/dialogFormRow">

            <TextView
                style="@style/dialogFormLabel"
                android:text="@string/action"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/actionSpinner"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:entries="@array/actions"
                android:minWidth="400dp"
                android:theme="@style/dialogFormText"/>
        </LinearLayout>

        <LinearLayout
            style="@style/dialogFormRow">

            <TextView
                style="@style/dialogFormLabel"
                android:text="@string/habit"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/habitSpinner"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:entries="@array/actions"
                android:minWidth="400dp"
                android:theme="@style/dialogFormText"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingStart="0dp">

        <Button
            android:id="@+id/buttonSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>